[gd_scene load_steps=19 format=3 uid="uid://dl7tlg6w0eyas"]

[ext_resource type="Script" uid="uid://bhnyru0q25l3n" path="res://resource/pet/Pet.gd" id="1_bpwwj"]
[ext_resource type="Script" uid="uid://dqbx4m2xcx2bt" path="res://resource/pet/pet_state_machine.gd" id="1_fm2pq"]
[ext_resource type="PackedScene" uid="uid://dfkq8j2ktl5js" path="res://resource/droppable/excrement.tscn" id="2_bte7q"]
[ext_resource type="Resource" uid="uid://dp85ytsnwka4m" path="res://data/drop_data/fish_excrement00.tres" id="2_nfquc"]
[ext_resource type="Script" uid="uid://dkuu5mtkv38wx" path="res://resource/components/behavior/movement_component.gd" id="2_wcy08"]
[ext_resource type="Texture2D" uid="uid://tgjqgpyumgi" path="res://assets/textures/aquatic/water/fish00.png" id="3_o1l0v"]
[ext_resource type="Script" uid="uid://cev476a751rcw" path="res://resource/components/behavior/hunger_component.gd" id="4_2kcnw"]
[ext_resource type="Script" uid="uid://dqt8ko0ma20vk" path="res://resource/components/behavior/lifecycle_component.gd" id="5_mm5nc"]
[ext_resource type="Script" uid="uid://clipkrlrmjxux" path="res://resource/components/behavior/excretion_component.gd" id="6_2uvqw"]
[ext_resource type="Script" uid="uid://cai0eti3te8xw" path="res://resource/components/behavior/mating_component.gd" id="9_1ifs6"]
[ext_resource type="Script" uid="uid://dlcjktsytxj1m" path="res://resource/components/behavior/mood_component.gd" id="11_5t5te"]
[ext_resource type="PackedScene" uid="uid://4ehirhktmcia" path="res://resource/animate/mating.tscn" id="11_g0k6o"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_qicqd"]
radius = 13.0
height = 40.0

[sub_resource type="Animation" id="Animation_o08dt"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}

[sub_resource type="Animation" id="Animation_yef1g"]
resource_name = "move"
length = 0.233336
loop_mode = 1
step = 0.0333333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [3, 4, 5]
}

[sub_resource type="Animation" id="Animation_o1l0v"]
resource_name = "idle"
length = 0.0333366
loop_mode = 1
step = 0.0333333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}

[sub_resource type="Animation" id="Animation_mm5nc"]
resource_name = "juvenile"
length = 0.233336
loop_mode = 1
step = 0.0333333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_o08dt"]
_data = {
&"RESET": SubResource("Animation_o08dt"),
&"adult": SubResource("Animation_yef1g"),
&"idle": SubResource("Animation_o1l0v"),
&"juvenile": SubResource("Animation_mm5nc")
}

[node name="Pet" type="CharacterBody2D"]
collision_mask = 4
input_pickable = true
script = ExtResource("1_bpwwj")
excrement_scene = ExtResource("2_bte7q")
excrement_data = ExtResource("2_nfquc")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, -3.61999e-06)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_qicqd")
debug_color = Color(0.937255, 0, 0, 0.419608)

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("3_o1l0v")
hframes = 6
frame = 4

[node name="Mating" parent="." instance=ExtResource("11_g0k6o")]
visible = false
position = Vector2(0, -19)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_o08dt")
}
autoplay = "juvenile"

[node name="Components" type="Node" parent="."]

[node name="MovementComponent" type="Node" parent="Components"]
script = ExtResource("2_wcy08")

[node name="HungerComponent" type="Node" parent="Components"]
script = ExtResource("4_2kcnw")

[node name="LifecycleComponent" type="Node" parent="Components"]
script = ExtResource("5_mm5nc")

[node name="ExcretionComponent" type="Node" parent="Components"]
script = ExtResource("6_2uvqw")

[node name="MatingComponent" type="Node" parent="Components"]
script = ExtResource("9_1ifs6")

[node name="MoodComponent" type="Node" parent="Components"]
script = ExtResource("11_5t5te")

[node name="PetStateMachine" type="Node" parent="."]
script = ExtResource("1_fm2pq")

[node name="InfoLabel" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -30.0
offset_top = -37.0
offset_right = 30.0
offset_bottom = -18.0
grow_horizontal = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_font_sizes/font_size = 16
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="input_event" from="." to="." method="_on_input_event"]
